--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,34 @@
-<router-outlet />
+<div class="w-full h-[100vh] overflow-auto content-bg">
+  <router-outlet />
+  <header
+    class="flex flex-col md:flex-row gap-6 md:px-12 py-5 border-b border-white/10 lg:mx-12 mx-6 box-border items-center shadow shadow-secondary/30"
+  >
+    <div class="flex-1">
+      <img src="/logo-negative.webp" class="w-36" alt="logo" />
+    </div>
+    <div
+      class="p-1 justify-end md:w-auto border-white/20 flex gap-2 rounded-lg border"
+    >
+      <app-button
+        (clicked)="changeTab('Category')"
+        class="flex-1 text-nowrap"
+        [fullWidth]="true"
+        [variant]="selectedTab === 'Category' ? 'primary' : 'secondary'"
+        [leadingIcon]="ListIcon"
+        >Category Management</app-button
+      >
+      <app-button
+        (clicked)="changeTab('Device')"
+        class="flex-1 text-nowrap"
+        [fullWidth]="true"
+        [variant]="selectedTab === 'Device' ? 'primary' : 'secondary'"
+        [leadingIcon]="SmartphoneIcon"
+        >Device Management</app-button
+      >
+    </div>
+  </header>
+  <main class="lg:mx-12 mx-6 my-5 text-white">
+    <app-category-template *ngIf="selectedTab === 'Category'" />
+    <app-device-template *ngIf="selectedTab === 'Device'"/>
+  </main>
+</div>
