chore(wip): created more components

--- a/frontend/src/app/components/organisms/form-device/form-device.component.html
+++ b/frontend/src/app/components/organisms/form-device/form-device.component.html
@@ -3,7 +3,10 @@
   class="pt-4 flex flex-col"
   [formGroup]="formGroup"
 >
-  <app-select label="Category" [options]="convertToSelectList(categories, 'name')">
+  <app-select
+    label="Category"
+    [options]="convertToSelectList(categories, 'name')"
+  >
   </app-select>
   <app-input-text
     formControlName="partNumber"
