--- a/frontend/src/app/components/organisms/form-device/form-device.component.html
+++ b/frontend/src/app/components/organisms/form-device/form-device.component.html
@@ -5,12 +5,14 @@
 >
   <app-select
     label="Category"
+    formControlName="category"
     [options]="convertToSelectList(categories, 'name')"
   >
   </app-select>
   <app-input-text
     formControlName="partNumber"
     [required]="true"
+    type="number"
     [showValidation]="true"
     [errorMessages]="{
       required: 'Part Number is required',
