--- a/frontend/src/app/components/atoms/popup/popup.component.html
+++ b/frontend/src/app/components/atoms/popup/popup.component.html
@@ -1,6 +1,6 @@
 <div
   [ngClass]="[
-    'bg-secondary flex flex-col gap-0.5 text-white p-2 shadow-sm rounded-md relative top-2',
+    'bg-secondary flex flex-col gap-0.5 text-white p-2 shadow-sm max-h-32 overflow-auto rounded-md relative top-2',
     floating ? 'absolute' : '',
     open ? 'visible' : 'hidden pointer-events-none',
   ]"
