--- a/frontend/src/app/components/organisms/table-category/table-category.component.html
+++ b/frontend/src/app/components/organisms/table-category/table-category.component.html
@@ -9,8 +9,8 @@
   </thead>
   <tbody>
     <tr *ngFor="let category of categoriesList" class="even:bg-white/2">
-      <td class="py-2 px-3">abc</td>
-      <td class="py-2 px-3">abc</td>
+      <td class="py-4 px-3">{{ category.id }}</td>
+      <td class="py-4 px-3">{{ category.name }}</td>
       <td class="px-3 text-right">
         <button
           (click)="onDelete(category.id)"
@@ -38,14 +38,16 @@
 <!-- Confirm delete popup -->
 <dialog #dialogDelete class="bg-secondary py-6 m-auto rounded-xl px-6 w-lg">
   <h1 class="text-xl text-white mb-2">Confirm Delete</h1>
-  <p class="text-white/75 mb-3">Are you sure you want to delete this category?</p>
+  <p class="text-white/75 mb-3">
+    Are you sure you want to delete this category?
+  </p>
   <div class="flex justify-end w-full">
-  <app-button variant="secondary" (clicked)="onCancelDelete()"
-    >Cancel</app-button
-  >
-  <app-button variant="danger" (clicked)="onConfirmDelete()"
-    >Delete it</app-button
-  >
+    <app-button variant="secondary" (clicked)="onCancelDelete()"
+      >Cancel</app-button
+    >
+    <app-button variant="danger" (clicked)="onConfirmDelete()"
+      >Delete it</app-button
+    >
   </div>
 </dialog>
 <!-- End - Confirm delete popup-->
